# glean-developer-site

./: .env.example  .git-blame-ignore-revs  .gitignore  .markdown-coderc.json  .prettierignore  .vale.ini  AGENTS.md  BENCHMARK_RESULTS.md  CLAUDE.md  CODEOWNERS  FEATURE_FLAGS.md  MCP_REGISTRY.md  README.md  _redeploy-trigger.mdx  actions.mdx  api-admin.mdx  api-clients.mdx  changelog.mdx  client.mdx  docs.json  docusaurus.config.ts  home.mdx  indexing.mdx  link-check-fixme.md  link-check-results.json  link-check-summary.md  mise.toml  openapi.config.ts  package-lock.json  package.json  permalinks.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  rate-limits.mdx  redirects.json  sdk.mdx  server.json  sidebars.ts  test.mdx  (+6 more)
.github/: dependabot.yml
_overrides/: overrides.css
actions/: authentication.mdx  create-actions.mdx  faq.mdx
agents/: agents-api.mdx  index.mdx  langchain.mdx  mcp.mdx
api/: feature-flags.js  glean-search-provider.mjs  mcp.ts
brand/: fonts.css  styles.css
changelog/: README.md
client/: authentication.mdx  chat.mdx  openapi.mdx
docs/: docs-mcp.mdx
home/: community.mdx  opensource.mdx  overview.mdx
indexing/: openapi.mdx  people-teams-identity.mdx
patches/: @docusaurus__tsconfig@3.10.1.patch
schemas/: recipe.schema.json
scripts/: DEPRECATIONS.md  check-links.sh  (+40 more)
scripts/indexing/: .env.example  README.md  data_client.py  data_clients.py  data_types.py  developer_docs_connector.py  indexing_logger.py  main.py  mise.toml  pyproject.toml
scripts/indexing/tests/: conftest.py  test_api_route.py  test_data_client.py
(+1612 files in other folders)
