[project]
name = "glean-developer-docs-indexing"
version = "0.1.0"
description = "Indexing scripts for Glean developer documentation"
requires-python = ">=3.10,<4.0"
dependencies = [
    "glean-indexing-sdk",
    "requests",
    "playwright",
    "beautifulsoup4",
    "lxml",
    "trafilatura>=2.0.0",
]


[tool.uv]
dev-dependencies = []
